--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -263,9 +263,9 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .contact-form span, #welcome ul  {width:100%!important;}
   .captcha {margin-bottom:5px;}
   .content-container .content img.logo {position:relative; left:0;}
-  #activities ul, #locations ul { -webkit-column-count: 1;}
-  .activities .bx-wrapper,.accommodations .bx-wrapper, .locations .bx-wrapper {max-width:620px!important;}
-  .activities h1,.accommodations h1, .locations h1 {margin:30px 0!important;}
+  #locations ul { -webkit-column-count: 1;}
+  .accommodations .bx-wrapper, .locations .bx-wrapper {max-width:620px!important;}
+  .accommodations h1, .locations h1 {margin:30px 0!important;}
 }
 
 /*** sm ***/
@@ -279,7 +279,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .amenities img {width:78px; height:78px;}
   #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto;}
   #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:260px;}
-  #blog_posts img {display:none;}
+  .blog_locations #blog_posts img {display:none;}
 }
 
 /*** md ***/
