--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -235,7 +235,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   }
   .details,.description {font-size:11px; line-height:30px;
     h1 {display:none;}
-    p {width:auto; line-height:16px; margin:0; text-align:left;}
+    p {width:auto; line-height:16px; margin:0!important; text-align:left;}
   }
 }
 
@@ -248,14 +248,19 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .navbar-hamburger {top:10px; right:10px;}
   nav ul h2 {margin:30px 0!important;}
   .banner {position:relative;}
-  .banner .banner-text {position: absolute; top:50%; margin-top:-33px; width:100%;}
+  .banner .banner-text {position: absolute; top:50%; margin-top:-9px; width:100%;}
   .banner .banner-text h2 {@include slider_font(); margin:0!important;}
   .banner .banner-text h1 {@include slider_font(); font-size:36px;}
-  #welcome,#locations,#contact,#people,#countries {padding:35px 0 0 0;}
-  .div1,.div2,.div3,.div4,.div5,.div6 {opacity:1;}
-  h1,h2,p {margin:0 0 30px 0!important; width:100%!important;}
+  h1 {line-height:30px; margin:30px 0;}
+  h2 {line-height:24px; margin:30px 0;}
+  h3 {line-height:24px; margin:30px 0;}
+  .div1,.div2,.div3 {opacity:1;}
+  h1,h2,p,#welcome ul, #welcome-locations ul, .accommodation ul {width:100%!important;}
+  #welcome, #locations, #contact, #people, #countries {padding:0;}
+  .content-container .content h1, .content-container .content h2 {margin:30px 0;}
   #people { background: #489AF0;}
-  #people .street-child,form { width:100%!important;}
+  #people .content-container .content h2 {margin:30px 0;}
+  #people .street-child,form { width:100%!important; padding:0;}
   #people .street-child img {float:none!important; margin:0 auto 30px auto;}
   #countries {background: #000000;}
   #countries .content-container{ height: auto;}
@@ -264,8 +269,14 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .captcha {margin-bottom:5px;}
   .content-container .content img.logo {position:relative; left:0;}
   #locations ul { -webkit-column-count: 1;}
-  .accommodations .bx-wrapper, .locations .bx-wrapper {max-width:620px!important;}
-  .accommodations h1, .locations h1 {margin:30px 0!important;}
+  .accommodations .bx-wrapper, .locations .bx-wrapper {max-width:108px!important;}
+  #welcome-locations .bx-viewport, #welcome-accommodation .bx-viewport {height:138px!important;}
+  #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto;}
+  #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:196px;}
+  #locations-blog-container .blog-post h2 {margin:0!important;}
+  .accommodation ul.amenities {width:100%;}
+  .accommodation ul.amenities li:nth-child(8) {margin-right:10px;}
+  .blog_locations {margin-top:30px;}
 }
 
 /*** sm ***/
