--- a/app/views/layouts/_accommodation_item.html.erb
+++ b/app/views/layouts/_accommodation_item.html.erb
@@ -1,5 +1,5 @@
 <% if @accommodation.present? %>
-  <div class="master-slider ms-skin-default hidden-xs" id="masterslider2">
+  <div class="master-slider ms-skin-default" id="masterslider2">
     <% @accommodation.gallery.items.each do |banner| %>
       <div class="ms-slide slide-1" data-delay="6">
         <!-- <h1><%= @accommodation.name %></h1> -->
