--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -242,6 +242,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 
 
 /*** xs ***/
+
 @media (max-width:767px) {
   .container {max-width:320px;}
   .logo {position: absolute; width: 220px; left: 50%; margin-left: -110px; top:50%; margin-top:-36px; }
@@ -255,17 +256,16 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   h2 {line-height:24px; margin:30px 0;}
   h3 {line-height:24px; margin:30px 0;}
   .div1,.div2,.div3 {opacity:1;}
-  h1,h2,p,#welcome ul, #welcome-locations ul, .accommodation ul,.accommodation ul.amenities {width:100%!important;}
-  #welcome, #locations, #contact, #people, #countries,#locations-blog-container,#welcome-locations,#welcome-accomodation,.accommodation{padding:0;}
+  h1,h2,p,ul {width:100%!important;}
+  #welcome, #locations, #contact, #people, #countries, #locations-blog-container, #welcome-locations, #welcome-accomodation,.accommodation {padding:0;}
   .content-container .content h1, .content-container .content h2 {margin:30px 0;}
   #people { background: #489AF0;}
-  #people .content-container .content h2 {margin:30px 0;}
   #people .street-child,form { width:100%!important; padding:0!important;}
   #people .street-child img {float:none!important; margin:0 auto 30px auto!important;}
   #countries {background: #000000;}
   #countries .content-container{ height: auto;}
   #countries .content-container .content {transform: none;}
-  .contact-form span, #welcome ul  {width:100%!important;}
+  .contact-form span {width:100%!important;}
   .captcha {margin-bottom:5px;}
   .content-container .content img.logo {position:relative; left:0;}
   #locations ul { -webkit-column-count: 1;}
@@ -273,7 +273,6 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   #welcome-locations .bx-viewport, #welcome-accommodation .bx-viewport {height:138px!important;}
   #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto;}
   #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:218px;}
-  #locations-blog-container .blog-post h2 {margin:0!important;}
   .accommodation ul.amenities li:nth-child(8) {margin-right:10px;}
   .accommodation ul.amenities li {margin:0 5px 10px 5px;}
   .blog_locations {margin-top:30px;}
