--- a/app/views/layouts/blogs.html.erb
+++ b/app/views/layouts/blogs.html.erb
@@ -12,14 +12,17 @@
 
 
   <% if action_name == "show" %>
-    <div class="blog_show">    
+    <div class="blog_show">         
       <div class="container">
-        <div class="row">
-          <div class="col-xs-12 col-sm-8">        
-            <%= yield %>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <%= yield :right %>
+        <div class="blog_show_container"> 
+          <div class="row">
+            <h1><%= @post.title %></h1>
+            <div class="col-xs-12 col-sm-8">        
+              <%= yield %>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+              <%= yield :right %>
+            </div>
           </div>
         </div>
       </div>  
