--- a/app/views/refinery/blog/shared/_posts.html.erb
+++ b/app/views/refinery/blog/shared/_posts.html.erb
@@ -6,7 +6,7 @@
     <% @posts.each do |blog_post| %>
       <li class='clearfix'>
       <%= link_to (image_fu blog_post.image, "105x80#c") + blog_post.title, refinery.blog_post_path(blog_post) %>
-      <div class="description"><%=raw truncate(blog_post.body, :length => 70) %></div></li>
+      <div class="description"><%=raw truncate(blog_post.body, :length => 70) %></div>
       </li>
     <% end %>
   </ul>
