--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -295,7 +295,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .amenities img {width:78px; height:78px;}
   #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto;}
   #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:260px;}
-  .blog_locations #blog_posts img {display:none;}
+  .blog_locations img {display:none;}
   .accommodation-container,.blog_show_container { margin-top:0; padding:0;}
 }
 
