--- a/app/views/layouts/_accommodation_item.html.erb
+++ b/app/views/layouts/_accommodation_item.html.erb
@@ -25,6 +25,9 @@
           <% end %>
           <%= raw @accommodation.description %>
         </div>
+        <div class="col-xs-12">
+          <%= link_to 'Start Your Journey', '#contact', :class=>"contact_btn" %>
+        </div>
       </div>
     </div>
   </div>
@@ -46,6 +49,6 @@
     instantStartLayers: true,
     view:"fade"
   });
-      slider2.control('bullets');
+  slider2.control('bullets');
   slider2.control('arrows');
 </script>
