--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -39,6 +39,9 @@
           <div class="col-xs-12 div1">
               <%=raw @location.description %>
           </div>
+          <div class="col-xs-12">
+            <%= link_to 'Start Your Journey', '#contact', :class=>"contact_btn" %>
+          </div>
         </div>
         <% child_locations = Refinery::Locations::Location.where(:parent_id => @location.id) %>
         <% if child_locations.present? %>
@@ -122,6 +125,9 @@
         <div class="row">
           <div class="col-xs-12 div1">
               <%=raw @location.description %>
+          </div>
+          <div class="col-xs-12">
+            <%= link_to 'Start Your Journey', '#contact', :class=>"contact_btn" %>
           </div>
         </div>
       <% accommodations = Refinery::Accommodations::Accommodation.all %>
