--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -155,7 +155,7 @@
     </div>
 
     <!--           start           -->
-    <div class="accommodation_item"></div>
+    <div class="accommodation_item" id="accommodation_item"></div>
     <!--            end             -->
 
 
