--- a/app/views/refinery/_menu_branch.html.erb
+++ b/app/views/refinery/_menu_branch.html.erb
@@ -4,7 +4,25 @@
   end
 -%>
 <li<%= ['', css].compact.join(' ').gsub(/\ *$/, '').html_safe %>>
-<%= link_to(menu_branch.title, refinery.url_for(menu_branch.url)) -%>
+
+  <% if menu_branch.url.include? '/locations' %>
+    <h2><span  class="location_btn">Locations</span></h2>
+    <% @menu_locations = Refinery::Locations::Location.where('parent_id IS null') %>
+    <% if @menu_locations.present? %>
+      <ul>
+        <% @menu_locations.each do |location| %>
+          <li class="location_nav">
+            <%= link_to location.name, refinery.locations_location_path(location) %>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
+  <% elsif menu_branch.url.include? '/contact' %>
+    <h2><%= link_to(menu_branch.title, '#contact', class: 'contact_btn') -%></h2>
+  <% else %>
+    <h2><%= link_to(menu_branch.title, refinery.url_for(menu_branch.url)) -%></h2>
+  <% end %>
+
   <% if ( (children = menu_branch.children unless hide_children).present? &&
           (!local_assigns[:menu_levels] || menu_branch.ancestors.length < local_assigns[:menu_levels]) ) -%>
     <ul class='clearfix'>
