--- a/app/views/layouts/_accommodation_item.html.erb
+++ b/app/views/layouts/_accommodation_item.html.erb
@@ -18,7 +18,7 @@
             <%= raw @accommodation.description %>
           </div>
           <div class="col-xs-12">
-            <%= link_to 'Start Your Journey', '#contact', :class=>"contact_btn" %>
+            <%= link_to 'Start Your Journey', '#contact', :class=>"btn btn-default btn-custom" %>
           </div>
           <div class="col-xs-12">
             <% if @accommodation.amenities.present? %>
